# EVSL

./: .gitignore  README  README.md
EVSL_1.0/: LOGFILE  README  makefile  makefile.in  makefile.in_Linux.example  makefile.in_MacOS.example  makefile~
EVSL_1.0/Documentation/: Doxyfile  Doxygen-Errors.txt  makefile
EVSL_1.0/FORTRAN/: evsl_f90.c
EVSL_1.0/INC/: blaslapack.h  def.h  evsl.h  internal_proto.h  struct.h
EVSL_1.0/MATLAB/: jac2Pltd.m
EVSL_1.0/MATRICES/: A.mtx  A_scal.mtx  B.mtx  B_scal.mtx
EVSL_1.0/SRC/: 00README  cheblanNr.c  cheblanTr.c  chebpoly.c  chebsi.c  dos_utils.c  dumps.c  evsl.c  exeiglap3.c  lanTrbounds.c  lanbounds.c  landos.c  landosG.c  landosG2.c  lsPol.c  lsPol1.c  mactime.c  makefile  misc_la.c  ratfilter.c  ratlanNr.c  ratlanTr.c  simpson.c  simpson2.c  spmat.c  spslice.c  spslice2.c  stats.c  suitesparse.c  timing.c  vect.c
EVSL_1.0/TESTS/: 00README
EVSL_1.0/TESTS/COMMON/: 00README  io.c  io.h  lapl.c
EVSL_1.0/TESTS/COMMON_GEN/: 00README  io.c  io.h
EVSL_1.0/TESTS/Fortran/: LapPLanN.f90  LapPLanN_MatFree.f90  LapPLanR.f90  LapRLanN.f90  LapRLanR.f90  csr_module.f90  csrmatrix.mod  makefile  makefile_old
EVSL_1.0/TESTS/Gen_Lap/: 00README  LapPLanN.c  LapPLanR.c  LapRLanN.c  LapRLanR.c  MMPLanN.c~  io.h  makefile
EVSL_1.0/TESTS/Gen_MM/: makefile  matfile
EVSL_1.0/TESTS/Gen_MM_KPM/: 00README  MMPLanN.c  MMPLanR.c  MMRLanN.c  MMRLanR.c  io.h  makefile  matfile
EVSL_1.0/TESTS/Gen_MM_Lanczos/: MMRLanN.c
EVSL_1.0/TESTS/Gen_MM_Landos/: 00README  MMPLanN.c  MMPLanR.c  MMRLanN.c  MMRLanR.c  io.c  makefile  tester.pl
EVSL_1.0/TESTS/Landos/: .gitignore  00README  LanDos.c  LanDosG.c  LanDosG.c~  LanDosG2.c  exDOS.c  io.c  lsPol.c  makefile  makefile~  matfile  mmio.c  tester.eps  tester.gnuplot  tester.pl  testerG.eps  testerG.gnuplot  testerG_ex.gnuplot  tester_ex.gnuplot
EVSL_1.0/TESTS/Lap/: LapPLanN.c  LapPLanN_MatFree.c  LapRLanN.c  LapRLanR.c  makefile
EVSL_1.0/TESTS/MM/: MMPLanN.c  MMPLanR.c  MMPLanR_omp.c  MMPSI.c  MMRLanN.c  MMRLanR.c  io.c  makefile  matfile
EVSL_1.0/TESTS/PLanN/: LapPLanN.c  LapPLanN_MatFree.c  MMPLanN.c
EVSL_1.0/TESTS/PLanR/: 00README  LapPLanR.c  MMPLanR.c  MMPLanR_omp.c  makefile
EVSL_1.0/TESTS/PSI/: 00README  LapPSI.c  makefile
EVSL_1.0/TESTS/RLanN/: 00README  LapRLanN.c  MMRLanN.c  makefile
EVSL_1.0/TESTS/RLanR/: LapRLanR.c  MMRLanR.c  makefile
EVSL_1.0/TESTS_Gen/: 00README  GenPLanN.c  GenPLanR.c  GenPLanR_omp.c  GenPSI.c  GenRLanN.c  GenRLanR.c  LanDos.c  io.c  io.h  makefile  makefileP  makefileR  matfile  mmio.c
EVSL_1.0/TESTS_Gen_Lap/: 00README  LapPLanN.c  LapPLanR.c  LapRLanN.c  LapRLanR.c  io.c  makefile
EVSL_1.0/TESTS_Gen_MM/: 00README  MMPLanR.c  MMRLanN.c  MMRLanR.c  io.c  makefile  matfile
EVSL_1.0/TESTS_Landos/: .gitignore  LanDos.c  makefile
EVSL_1.0/TESTS_Lap/: 00README  LapPLanN.c  LapPLanN_MatFree.c  LapPLanR.c  LapPLanR_Gen.c  LapPSI.c  LapRLanN.c  LapRLanN_Gen.c  LapRLanR.c  makefile  makefileP  makefileR
EVSL_1.0/TESTS_MM/: 00README  MMPLanN.c  MMPLanR.c  MMPLanR_omp.c  MMPSI.c  MMRLanN.c  MMRLanR.c  io.h  makefile
EVSL_1.1.0/: makefile  makefile.in  makefile.in_Linux.example  makefile.in_MacOS.example
EVSL_1.1.0/Documentation/: Doxyfile  README.md
EVSL_1.1.0/FORTRAN/: evsl_f90.c
EVSL_1.1.0/INC/: def.h  evsl.h  internal_proto.h  struct.h
EVSL_1.1.0/MATLAB/: plotpol.m
EVSL_1.1.0/MATRICES/: NM1A.mtx  NM1B.mtx
EVSL_1.1.0/SRC/: chebiter.c  cheblanNr.c  cheblanTr.c  chebpoly.c  chebsi.c  dos_utils.c  evsl.c  lanbounds.c  landos.c  landosG.c  mactime.c  makefile  misc_la.c  ratfilter.c  ratlanNr.c  ratlanTr.c  simpson.c  spmat.c  spslice.c  spslice2.c  stats.c  timing.c  vect.c
EVSL_1.1.0/SWIG/: .gitignore  LanDos.py  README.md  evsl.i  makefile  setup.py
EVSL_1.1.0/TESTS/: 00README
EVSL_1.1.0/TESTS/COMMON/: io.c  io.h  lapl.c
EVSL_1.1.0/TESTS/COMMON_GEN/: io.h  mmio.c
EVSL_1.1.0/TESTS/Fortran/: csr_module.f90  genmat.f  makefile
EVSL_1.1.0/TESTS/Landos/: .gitignore  00README  LanDos.c  LanDosG.c  exDOS.c  makefile  matfileG  tester.gnuplot  testerG.gnuplot
EVSL_1.1.0/TESTS/PLanN/: 00README  LapPLanN.c  LapPLanN_MatFree.c  MMPLanN.c  makefile
EVSL_1.1.0/TESTS/PLanR/: 00README  LapPLanR.c  MMPLanR_omp.c  makefile
EVSL_1.1.0/TESTS/PSI/: 00README  LapPSI.c  makefile
EVSL_1.1.0/TESTS/READMES/: 00README  Gen_MM_KPM  Gen_MM_Landos  MM
EVSL_1.1.0/TESTS/RLanN/: MMRLanN.c  makefile
EVSL_1.1.0/TESTS/RLanR/: MMRLanR.c  makefile
EVSL_1.1.1/: COPYRIGHT  config.status  configure  makefile  makefile.in
EVSL_1.1.1/CONFIG/: EVSL_config.h.in  boostrap  configure.in  makefile.in.config
EVSL_1.1.1/DIRECT/: makefile
EVSL_1.1.1/DIRECT/CXSparse/: makefile
EVSL_1.1.1/DIRECT/Interface/: evsl_cxsparse.c  evsl_direct.h  evsl_direct_f90.c  evsl_pardiso.c  evsl_suitesparse.c  makefile
EVSL_1.1.1/Documentation/: .gitignore
EVSL_1.1.1/EVSL/include/: EVSL_config.h  evsl.h  struct.h
EVSL_1.1.1/INC/: EVSL_config.h  blaslapack.h  def.h  evsl.h  internal_header.h  internal_proto.h  struct.h
EVSL_1.1.1/LIB/: makefile
EVSL_1.1.1/SRC/: 00README  cheblanNr.c  cheblanTr.c  chebpoly.c  chebsi.c  dos_utils.c  dumps.c  evsl.c  evsl_cuda.cu  evsl_f90.c  evsl_memory.c  exDOS.c  lanTrbounds.c  lanbounds.c  landos.c  landosG.c  mactime.c  makefile  misc_la.c  ratfilter.c  ratlanNr.c  ratlanTr.c  ratsi.c  simpson.c  spmat.c  spslice.c  spslice2.c  stats.c  timing.c  vect.c
EVSL_1.1.1/SRC/blas/: daxpy.c  dcabs1.c  dcopy.c  ddot.c  dgemm.c  dgemv.c  dger.c  dnrm2.c  dscal.c  dswap.c  dsymm.c  dsymv.c  dsyr2.c  dsyr2k.c  dsyrk.c  dtrmm.c  dtrmv.c  dtrsm.c  dtrsv.c  evsl_blas.h  f2c.h  izamax.c  lsame.c  makefile  xerbla.c  zgemm.c  zgeru.c  zscal.c  zswap.c  ztrsm.c
EVSL_1.1.1/SRC/lapack/: dgeqr2.c  dgeqrf.c  disnan.c  dlae2.c  dlaebz.c  dlaev2.c  dlaisnan.c  dlamch.c  dlaneg.c  dlanst.c  dlansy.c  dlapy2.c  dlar1v.c  dlarf.c  dlarfb.c  dlarfg.c  dlarft.c  dlarnv.c  dlarra.c  dlarrb.c  dlarrc.c  dlarrd.c  dlarre.c  dlarrf.c  dlarrj.c  dlarrk.c  dlarrr.c  dlarrv.c  dlartg.c  dlaruv.c  dlascl.c  dlaset.c  dlasq2.c  (+37 more)
EVSL_1.1.1/TESTS/: 00README  makefile
(+73 files in other folders)
